[metadata]
name = roblox-studio
version = 0.0.1
author = jmkdev
author_email = jmk@jmksite.dev
description = ro.py-studio is a library for interacting with Roblox installations.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ro-py/ro.py-studio
project_urls =
    Discord = https://discord.gg/tjRfCbDMSk
    Issue Tracker = https://github.com/ro-py/ro.py-studio/issues
    GitHub = https://github.com/ro-py/ro.py-studio
    Examples = https://github.com/ro-py/ro.py-studio/tree/main/examples
    Twitter = https://twitter.com/jmkdev
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: AsyncIO
    Topic :: Internet :: WWW/HTTP :: Dynamic Content :: CGI Tools/Libraries
    Topic :: Software Development :: Libraries

[options]
package_dir =
    = roblox_studio
packages: find:
python_requires: >=3.7

[options.packages.find]
where = roblox_studio
